--- a/src/Components/_styles/LogRegProbFields.css
+++ b/src/Components/_styles/LogRegProbFields.css
@@ -2,9 +2,12 @@
     display: flex;
     justify-content: center;
     margin-top: 32px;
+    flex-direction: column;
+    align-items: center;
 }
 
 .field {
     width: 85%;
     max-width: 400px;
+    margin-bottom: 16px;
 }
