--- a/src/Components/_styles/LogisticRegression.css
+++ b/src/Components/_styles/LogisticRegression.css
@@ -1,9 +1,13 @@
-.endpointTest {
-    width: 100%;
-}
-
-.kMeansScatter {
+.fieldContainer {
     display: flex;
     justify-content: center;
+    margin-top: 32px;
+    flex-direction: column;
+    align-items: center;
 }
 
+.field {
+    width: 85%;
+    max-width: 600px;
+    margin-bottom: 20px !important;
+}
