--- a/src/Components/_styles/KMeans.css
+++ b/src/Components/_styles/KMeans.css
@@ -1,19 +1,13 @@
-.endpointTest {
-    width: 100%;
-}
-
-.kMeansScatter {
+.kMeansFieldContainer {
     display: flex;
     justify-content: center;
+    margin-top: 32px;
+    flex-direction: column;
+    align-items: center;
 }
 
-.tickerNameTooltip {
-    background-color: rgba(205, 205, 205, 0.9);
-    border: 2px solid black;
-    border-radius: 5px;
-    padding: 10px;
-}
-
-.tooltipLabel {
-    font-weight: 600;
+.kMeansField {
+    width: 85%;
+    max-width: 600px;
+    margin-bottom: 20px !important;
 }
