--- a/src/Components/_styles/LogRegProbFields.css
+++ b/src/Components/_styles/LogRegProbFields.css
@@ -1,4 +1,4 @@
-.fieldContainer {
+.regProbFieldContainer {
     display: flex;
     justify-content: center;
     margin-top: 32px;
@@ -6,7 +6,7 @@
     align-items: center;
 }
 
-.field {
+.regProbField {
     width: 85%;
     max-width: 600px;
     margin-bottom: 20px !important;
