--- a/src/Components/_styles/KMeansChart.css
+++ b/src/Components/_styles/KMeansChart.css
@@ -18,8 +18,8 @@
 }
 
 .tickerNameTooltip {
-    background-color: rgba(205, 205, 205, 0.9);
-    border: 2px solid black;
+    background-color: rgba(92, 107, 192, 0.6);
+    border: 2px solid rgb(255, 255, 255);
     border-radius: 5px;
     padding: 10px;
 }
