--- a/src/Components/_styles/LogisticRegression.css
+++ b/src/Components/_styles/LogisticRegression.css
@@ -4,10 +4,10 @@
     margin-top: 32px;
     flex-direction: column;
     align-items: center;
+    height: 100vh;
 }
 
 .logRegField {
     width: 85%;
     max-width: 600px;
-    margin-bottom: 20px !important;
 }
