--- a/src/Landing.css
+++ b/src/Landing.css
@@ -20,5 +20,25 @@
 
 .main img {
     width: 85vw !important;
-    max-width: 400px;
+    max-width: 200px;
+}
+
+@media screen and (min-width: 768px) {
+    .main img {
+        max-width: 400px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .main h2 {
+        font-size: 40px;
+    }
+
+    .main h4 {
+        font-size: 30px;
+    }
+
+    .main h5 {
+        font-size: 20px;
+    }
 }
