SLOTH: UI/UX Updates
* Added info messages for initial load of all charts
* Breakpoints for button subtitle text

--- a/src/Components/_styles/KMeansChart.css
+++ b/src/Components/_styles/KMeansChart.css
@@ -32,3 +32,9 @@
     flex-flow: row wrap;
     gap: 30px;
 }
+
+@media screen and (max-width: 767px) {
+    .kMeansChartFieldContainer h6 {
+        max-width: 85vw;
+    }
+}
