--- a/src/Components/_styles/LogisticRegression.css
+++ b/src/Components/_styles/LogisticRegression.css
@@ -11,3 +11,9 @@
     width: 85%;
     max-width: 600px;
 }
+
+@media screen and (max-width: 767px) {
+    .logRegFieldContainer h6 {
+        max-width: 85vw;
+    }
+}
