--- a/src/Components/_styles/LogRegChart.css
+++ b/src/Components/_styles/LogRegChart.css
@@ -41,7 +41,7 @@
     font-weight: 600;
 }
 
-.chartFieldContainer {
+.chartFieldContainer > div {
     display: flex;
     justify-content: center;
     margin-top: 32px;
@@ -49,24 +49,42 @@
     column-gap: 30px;
 }
 
-.chartField {
+.chartField > div {
     width: 28%;
     max-width: 350px;
     margin-bottom: 20px !important;
+    height: 60px;
 }
 
-.chartFieldButton {
-    margin: 20px 0 40px !important;
+.chartField > button {
+    width: 28%;
+    max-width: 350px;
+    margin-top: 20px !important;
+    height: 60px;
+}
+
+.helperTextLogRegChart {
+    display: flex;
+    justify-content: center;
+    margin: 40px 0 60px 0;
+}
+
+.helperTextLogRegChart h6 {
+    max-width: 800px;
 }
 
 @media screen and (max-width: 767px) {
-    .chartField {
+    .chartField > div {
         width: 85vw;
         max-width: 400px;
     }
 
-    .chartFieldButton {
+    .chartField > button {
         width: 85vw;
         max-width: 400px;
+    }
+
+    .helperTextLogRegChart h6 {
+        max-width: 85vw;
     }
 }
