--- a/src/Components/_styles/AddCryptoPriceData.css
+++ b/src/Components/_styles/AddCryptoPriceData.css
@@ -1,5 +1,5 @@
 .componentContainer {
-    margin: 40px 0 !important;
+    margin: 60px 0 !important;
 }
 
 .fieldContainer > div {
@@ -45,6 +45,8 @@
 
 .helperText h6 {
     max-width: 800px;
+    text-align: justify;
+    text-shadow: 1px 1px rgba(92, 107, 192, 0.2);
 }
 
 @media screen and (max-width: 767px) {
