--- a/src/Components/_styles/LogRegChart.css
+++ b/src/Components/_styles/LogRegChart.css
@@ -71,6 +71,8 @@
 
 .helperTextLogRegChart h6 {
     max-width: 800px;
+    text-align: justify;
+    text-shadow: 1px 1px rgba(92, 107, 192, 0.2);
 }
 
 @media screen and (max-width: 767px) {
