--- a/src/Components/_styles/LogisticRegression.css
+++ b/src/Components/_styles/LogisticRegression.css
@@ -3,7 +3,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin: 40px 0;
+    margin: 60px 0;
 }
 
 .logRegField div {
@@ -26,6 +26,8 @@
 
 .helperTextLogReg h6 {
     max-width: 800px;
+    text-align: justify;
+    text-shadow: 1px 1px rgba(92, 107, 192, 0.2);
 }
 
 @media screen and (max-width: 767px) {
