SLOTH: More CSS Tweaks
* Targetting `.class > div > div {...}` to make the `TextField` height actually 60px

--- a/src/Components/_styles/LogRegChart.css
+++ b/src/Components/_styles/LogRegChart.css
@@ -53,6 +53,9 @@
     width: 28%;
     max-width: 350px;
     margin-bottom: 20px !important;
+}
+
+.chartField > div > div {
     height: 60px;
 }
 
