--- a/src/Components/_styles/LogRegProbFields.css
+++ b/src/Components/_styles/LogRegProbFields.css
@@ -3,7 +3,14 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin: 40px 0;
+}
+
+.regProbFieldContainer:first-of-type {
+    margin: 100px 0;
+}
+
+.regProbFieldContainer:last-of-type {
+    margin: 100px 0;
 }
 
 .regProbFieldContainer > div {
@@ -17,7 +24,10 @@
     width: 85vw;
     max-width: 600px;
     margin-bottom: 20px !important;
-    height: 100px;
+}
+
+.regProbField > div > div {
+    height: 60px;
 }
 
 .regProbField > button {
