--- a/src/Components/_styles/KMeansChart.css
+++ b/src/Components/_styles/KMeansChart.css
@@ -1,7 +1,7 @@
 .kMeansChartFieldContainer > div {
     display: flex;
     justify-content: center;
-    margin-top: 32px;
+    margin-top: 100px;
     flex-direction: column;
     align-items: center;
 }
@@ -9,6 +9,9 @@
 .kMeansChartField > div {
     width: 85vw;
     max-width: 600px;
+}
+
+.kMeansChartField > div > div {
     height: 60px;
 }
 
